--- a/src/app/features/lms/grp/components/dashboard/components/admin-service-requests/service-request/service-request.component.css
+++ b/src/app/features/lms/grp/components/dashboard/components/admin-service-requests/service-request/service-request.component.css
@@ -76,6 +76,12 @@ button.submit-req:hover {
   background-color: #65b2f5;
 }
 
+.delete-icon {
+  margin-left: 5px;
+  cursor: pointer;
+  color: red;
+}
+
 @media (max-width: 1000px) {
   .fixed-width-label {
     margin-bottom: 10px;
