--- a/src/app/features/base/components/header-sub-menu/member-sub-menu/member-sub-menu.component.html
+++ b/src/app/features/base/components/header-sub-menu/member-sub-menu/member-sub-menu.component.html
@@ -43,6 +43,7 @@
               role="button"
               data-bs-toggle="dropdown"
               aria-expanded="false"
+              routerLink="/home/lms/grp/dashboard/member-service-request"
               style="font-size: 12px"
             >
               <i
@@ -103,6 +104,7 @@
               role="button"
               data-bs-toggle="dropdown"
               aria-expanded="false"
+              routerLink="/home/lms/grp/dashboard/member-service-request"
               style="font-size: 12px"
             >
               <i
