--- a/src/app/features/lms/grp/components/dashboard/components/admin-service-requests/service-request/service-request.component.html
+++ b/src/app/features/lms/grp/components/dashboard/components/admin-service-requests/service-request/service-request.component.html
@@ -1,24 +1,24 @@
 <div class="main">
   <div class="container">
-    <div class="title">Service request</div>
+    <div class="title">{{ "lms.grp.service_request.admin.service_req.service_request" | translate }}</div>
     <form [formGroup]="serviceRegForm">
       <div class="row" style="padding-top: 10px;">
         <div class="col-md-4">
           <div class="col-lg-12 col-md-12 col-sm-12">
-            <label for="category" style="color: black;">Category</label>
+            <label for="category" style="color: black;">{{ "lms.grp.service_request.admin.service_req.category" | translate }}</label>
             <select class="form-select" [id]="'category'" formControlName="category">
               <option selected="true" disabled="disabled"></option>
-              <option *ngFor="let cat of " [value]="">{{ cat }}</option>
+              <option *ngFor="let cat of serviceReqCategories$ | async" [value]="cat.requestTypeCode">{{ cat.name | titlecase }}</option>
             </select>
           </div>
         </div>
 
         <div class="col-md-4">
           <div class="col-lg-12 col-md-12 col-sm-12">
-            <label for="categoryType" style="color: black;">Category type</label>
+            <label for="categoryType" style="color: black;">{{ "lms.grp.service_request.admin.service_req.category_type" | translate }}</label>
             <select class="form-select" [id]="'categoryType'" formControlName="categoryType">
               <option selected="true" disabled="disabled"></option>
-              <option *ngFor="let catType of " [value]="">{{ catType }}</option>
+              <option *ngFor="let catType of serviceReqCatTypes$ | async" [value]="catType.description">{{ catType.description | titlecase }}</option>
             </select>
           </div>
         </div>
@@ -30,53 +30,59 @@
       <div class="row" style="padding-top: 10px;">
         <div class="col-md-4">
           <div class="col-lg-12 col-md-12 col-sm-12">
-            <label for="policy" style="color: black;">Policy</label>
+            <label for="policy" style="color: black;">{{ "lms.grp.service_request.admin.service_req.policy" | translate }}</label>
             <select class="form-select" [id]="'policy'" formControlName="policy">
               <option selected="true" disabled="disabled"></option>
-              <option *ngFor="let pol of " [value]="">{{ pol }}</option>
+              <option *ngFor="let pol of serviceReqPolicies$ | async" [value]="pol.policyNumber">{{ pol.accountName | titlecase }}</option>
             </select>
           </div>
         </div>
 
         <div class="col-md-4">
           <div class="col-lg-12 col-md-12 col-sm-12">
-            <label for="policyMember" style="color: black;">Policy members</label>
+            <label for="policyMember" style="color: black;">{{ "lms.grp.service_request.admin.service_req.policy_members" | translate }}</label>
             <select class="form-select" [id]="'policyMember'" formControlName="policyMember">
               <option selected="true" disabled="disabled"></option>
-              <option *ngFor="let polMem of " [value]="">{{ polMem }}</option>
+              <option *ngFor="let polMem of policyMembers" [value]="polMem.policy_member_code">{{ polMem.member_name | titlecase }}</option>
             </select>
           </div>
         </div>
         <div class="col-md-4">
           <div class="col-lg-12 col-md-12 col-sm-12">
-            <label for="contactMethod" style="color: black;">Preferred contact method</label>
-            <select class="form-select" [id]="'contactMethod'" formControlName="contactMethod">
+            <label for="contactMethod" style="color: black;">
+              {{ "lms.grp.service_request.admin.service_req.preferred_contact_method" | translate }}
+            </label>
+            <select class="form-select" id="contactMethod" formControlName="contactMethod">
               <option selected="true" disabled="disabled"></option>
-              <option *ngFor="let contactMeth of " [value]="">{{ contactMeth }}</option>
+              <option *ngFor="let contactMeth of contactMethods$ | async" [value]="contactMeth.value">
+                {{ contactMeth.name | titlecase }}
+              </option>
             </select>
           </div>
+          
         </div>
       </div>
 
-      <div class="row" style="padding-top: 10px;">
+      <div class="row" style="padding-top: 40px;">
         <div class="col-md-4">
           <div>
             <div>
-              <label for="contactTime" style="color: black;">Preferred contact time</label>
+              <label for="contactTime" style="color: black;">{{ "lms.grp.service_request.admin.service_req.preferred_contact_time" | translate }}</label>
             </div>
             <div class="form-group">
               <div>
-                <p-calendar formControlName="contactTime" dateFormat="dd/mm/yy" [showIcon]="true" [showButtonBar]="true"
-                  placeholder="dd/mm/yy">
+                <p-calendar formControlName="contactTime" [timeOnly]="true" [showIcon]="true" [showButtonBar]="true"
+                  placeholder="HH:mm">
                 </p-calendar>
               </div>
             </div>
+            
           </div>
         </div>
 
         <div class="col-md-4">
           <div>
-            <label for="description" style="color: black;">Description</label>
+            <label for="description" style="color: black;">{{ "lms.grp.service_request.admin.service_req.description" | translate }}</label>
           </div>
           <div class="form-group">
             <div>
@@ -87,20 +93,17 @@
           </div>
         </div>
       </div>
-      <div class="title" style="margin-top: 40px;">Documents</div>
-      <div class="col-md-4 col-12">
-        <label for="fileUpload" style="color: black;">Upload file</label>
+      <div class="title" style="margin-top: 40px;">{{ "lms.grp.service_request.admin.service_req.documents" | translate }}</div>
+      <div class="col-md-4 col-sm-12" >
         <div class="d-flex align-items-center flex-wrap">
-          <select class="form-select fixed-width-label" style="display: flex; flex-grow: 1; align-items: center;"
-            [id]="'fileUpload'">
-            <option selected="true" disabled="disabled"></option>
-            <option *ngFor="let file of " [value]="">{{ file }}</option>
-          </select>
+          <label for="fileUpload" style="color: black; margin-right: 10px;">{{ "lms.grp.service_request.admin.service_req.upload_file" | translate }}</label>
           <div class="form-group" style="display: flex; flex-grow: 1; align-items: center;">
-            <input type="file" #fileInput style="display: none;">
-            <button class="choose-file">
-              <span class="file-text">Choose file</span>
+            <input type="file" #fileInput style="display: none;" (change)="onFileSelected($event)">
+            <button class="choose-file" (click)="fileInput.click()">
+              <span class="file-text">{{ "lms.grp.service_request.admin.service_req.choose_file" | translate }}</span>
             </button>
+            <span *ngIf="selectedFile" style="margin-left: 10px;">{{ selectedFile.name }}</span>
+            <i *ngIf="selectedFile" class="pi pi-trash delete-icon" (click)="removeFile()"></i>
           </div>
         </div>
       </div>
@@ -108,6 +111,6 @@
     </form>
   </div>
   <div class="button-container">
-    <button class="submit-req">Submit request</button>
+    <button class="submit-req" (click)="onSubmitRequest()">{{ "lms.grp.service_request.admin.service_req.submit_request" | translate }}</button>
   </div>
 </div>
